# ChangeLog for dev-python/twisted-mail
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/ChangeLog,v 1.35 2009/09/06 20:42:55 idl0r Exp $

  06 Sep 2009; Christian Ruppert <idl0r@gentoo.org>
  -files/twisted-mail-0.2.0-tests-2.2-compat.patch,
  twisted-mail-8.1.0.ebuild, twisted-mail-8.2.0.ebuild:
  Remove unused patch. Fix repoman complains.

*twisted-mail-8.2.0 (08 Jan 2009)

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org>
  -twisted-mail-0.1.0-r1.ebuild, -twisted-mail-0.2.0.ebuild,
  -twisted-mail-0.3.0.ebuild, -twisted-mail-0.4.0.ebuild,
  -twisted-mail-8.0.0.ebuild, +twisted-mail-8.2.0.ebuild:
  Bump to 8.2.0, remove old

  20 Dec 2008; nixnut <nixnut@gentoo.org> twisted-mail-8.1.0.ebuild:
  Stable on ppc wrt bug 231675

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> twisted-mail-8.1.0.ebuild:
  Stable on ppc64; bug #231675

  13 Aug 2008; Raúl Porcel <armin76@gentoo.org> twisted-mail-8.1.0.ebuild:
  alpha/ia64/x86 stable wrt #231675

  13 Aug 2008; Santiago M. Mola <coldwind@gentoo.org>
  twisted-mail-8.1.0.ebuild:
  amd64 stable wrt bug #231675

  11 Aug 2008; Ferris McCormick <fmccor@gentoo.org>
  twisted-mail-8.1.0.ebuild:
  Sparc stable, all tests good (part of Bug #231675).

  08 Aug 2008; Jeroen Roovers <jer@gentoo.org> twisted-mail-8.1.0.ebuild:
  Stable for HPPA (bug #231675).

*twisted-mail-8.1.0 (25 May 2008)

  25 May 2008; Thomas Raschbacher <lordvan@gentoo.org>
  +twisted-mail-8.1.0.ebuild:
  Version bump

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  twisted-mail-0.3.0.ebuild:
  ppc stable, bug #169888

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> twisted-mail-0.3.0.ebuild:
  Stable on ppc64; bug #169888

  15 Mar 2007; Jeroen Roovers <jer@gentoo.org> twisted-mail-0.3.0.ebuild:
  Stable for HPPA (bug #169888).
