@@ -1,4 +1,4 @@
 DIST TwistedMail-8.2.0.tar.bz2 130035 RMD160 5e0dc0e96c731bbf274f6b67143d13021d471093 SHA1 f4f310a56e321ec4bff730c324327715b7a87b57 SHA256 1ac8517feb4be92655d7c5b9ba652b279657d3c7b205e6fb267b094c87074eae
-EBUILD twisted-mail-8.2.0.ebuild 603 RMD160 70d7a4352c26f3f08d5dd5215286856ce10bc333 SHA1 108ed80bc08274c88be3560d3992eae96a1cdc29 SHA256 4170abd9b664999a90078442f86204d190112bb627fa7a1f358b4adf7f5c497e
-MISC ChangeLog 4884 RMD160 5038a2e6db5f7db6993e9f33373e9d465f939223 SHA1 771a55dcc0e0d63dabbe21df785a6aa99c687aa9 SHA256 445d87ebe7d29970da24ec2e302c05d10b8d3c7869e2133aec3cbbf1aa6689e2
+EBUILD twisted-mail-8.2.0.ebuild 714 RMD160 e2eab158ad394def4fff8b5935a753357b61460e SHA1 c5751520e2aa1730e77415e56066f9e781355215 SHA256 3b64a66c10f63ab7ef1d063c865465c616501d7a55bf0dcc6d779666342071a5
+MISC ChangeLog 5017 RMD160 147d6d9db9a49e4644f89fe32f0a8a03a368117b SHA1 0a0bc4efd73011db6e866bce1e677b1d0d60dfb3 SHA256 b907035eef6fcb2cc1f42316946556ae42086a9cbba3ce8bee9b0d1b10802624
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
